--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,37 @@
-:root{
+*{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 .container{
     display: flex;
+    height: 100vh;
+    max-height: 100%;
+}
+.container-right{
+
+}
+h1{
+    font-size: 30px;
+    font-weight: 300;
+    margin-top: 10vh;
+}
+.container-left{
+    display: flex;
+    background-image: url("/images/roberto-nickson-5wFcCUT9THY-unsplash.jpg");
+    background-size: 75vh;
+    background-repeat: no-repeat;
+    min-width: 500px;
+    max-width: 500px;
     
+    
+}
+.credit{
+    align-self: flex-end;
+    width: 500px;
+    color: white;
+    font-size: 14px;
+    text-align: center;
 }
