--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+@font-face{
+    font-family: norseFont;
+    src: url(/font/Norse-Bold.otf);
+}
 *{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
@@ -57,7 +61,6 @@ label{
     padding: 80px 0px 0px 0px;
 }
 .container-left{
-    
     background-image: url("/images/roberto-nickson-5wFcCUT9THY-unsplash.jpg");
     background-size: 75vh;
     background-repeat: no-repeat;
@@ -67,8 +70,11 @@ label{
     text-align: center;
 }
 .logo{
+    font-family: norseFont;
     margin-top: 30vh;
     font-size: 50px;
+    padding: 30px;
+    background-color: rgba(0, 0, 0, 0.315);
 }
 .credit{
     margin-top: auto;
