--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ h1{
     padding: 40px 0px 0px 0px;
     height: 30vh;
     box-shadow: 1px 5px 10px 0px rgb(150, 150, 150);
+    min-height: 340px;
 }
 form{
     display: flex;
@@ -69,6 +70,7 @@ label{
     color: white;
     text-align: center;
 }
+/*Fix the logo floating around & make it fixed| Also fix sidebar/bg image scaling improperly*/
 .logo{
     font-family: norseFont;
     margin-top: 30vh;
