Changed sidebar image

--- a/styles.css
+++ b/styles.css
@@ -62,9 +62,9 @@ label{
     padding: 80px 0px 0px 0px;
 }
 .container-left{
-    background-image: url("/images/roberto-nickson-5wFcCUT9THY-unsplash.jpg");
-    background-size: 75vh;
+    background-image: url("/images/tarun-LYz-wwiPycw-unsplash.jpg");
     background-repeat: no-repeat;
+    background-position: top center;
     min-width: 500px;
     max-width: 500px;
     color: white;
