--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face{
-    font-family: norseFont;
-    src: url(/font/Norse-Bold.otf);
+    font-family: squidFont;
+    src: url(/font/Game-of-squids.otf);
 }
 *{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -13,11 +13,12 @@
     display: flex;
     height: 100vh;
     max-height: 100%;
+    
 }
 .container-right,.container-left{
     flex-direction: column;
     width: auto;
-    background-color: rgb(241, 241, 241);
+    background-color: rgb(173, 173, 173);
 }
 .container-right>div{
     padding-left: 70px;
@@ -65,14 +66,13 @@ label{
     background-image: url("/images/tarun-LYz-wwiPycw-unsplash.jpg");
     background-repeat: no-repeat;
     background-position: top center;
-    min-width: 500px;
-    max-width: 500px;
+    width:35vh;
     color: white;
     text-align: center;
 }
 /*Fix the logo floating around & make it fixed| Also fix sidebar/bg image scaling improperly*/
 .logo{
-    font-family: norseFont;
+    font-family: squidFont;
     margin-top: 30vh;
     font-size: 50px;
     padding: 30px;
