Added form styling

--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,15 @@ form{
     padding: 18px; 
 }
 input{
+    outline: none;
     padding: 4px 4px;
     margin: 8px 0;
+    border: 1px solid #b1b2b4;
+    border-radius: 4px;
+}
+input:focus{
+    outline: #295db2 solid 2px;
+    box-shadow: 0px 0px 10px 1px #295db2;
 }
 label{
     font-family: "Monaco" ,"Lucida Console", "Courier New", monospace;
