--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,13 @@ input:focus{
     outline: #295db2 solid 2px;
     box-shadow: 0px 0px 10px 1px #295db2;
 }
+input.error{
+    border: 1px solid red;
+}
+p.error{
+     color: red;
+     font-size: 12px;
+}
 label{
     font-family: "Monaco" ,"Lucida Console", "Courier New", monospace;
     font-size: 14px;
@@ -110,4 +117,7 @@ button{
     width: 150px;
     height: 50px;
     border-radius: 8px;
+}
+button:active{
+    background-color: #1d3d70;
 }
