--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: squidFont;
-    src: url(./font/Game-of-squids.otf);
+    src: url("./font/Game-of-squids.otf");
 }
 *{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
